[gd_scene load_steps=18 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/JackiesBackground.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_Binoculars.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_FishingRods.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_RunningShoes.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_ShroomPamera.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/JakieCharacters.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_HeavyBoots.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Scenes/JakiesShop.gd" type="Script" id=8]
[ext_resource path="res://RainIsoMainContents/MainMusic/Nihilogue/Jakie's Shop.ogg" type="AudioStream" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/rainiso_Stick.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Resources/Funkturm.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://RainIsoMainContents/Resources/PaneraSingleIcon.png" type="Texture" id=12]
[ext_resource path="res://RainIsoMainContents/Scenes/Pause.tscn" type="PackedScene" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 56
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Environment" id=4]
background_mode = 4
tonemap_mode = 2
glow_enabled = true
glow_intensity = 8.0
glow_strength = 0.62
glow_bloom = 0.13
glow_blend_mode = 1
adjustment_enabled = true

[node name="JakiesShop" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 640, 360 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Items" type="Node2D" parent="."]

[node name="Item01" type="TextureButton" parent="Items"]
margin_left = 64.0
margin_top = 192.0
margin_right = 192.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem01" type="Sprite" parent="Items/Item01"]
position = Vector2( 64, 64 )
scale = Vector2( 9, 9 )
texture = ExtResource( 2 )

[node name="Item02" type="TextureButton" parent="Items"]
margin_left = 64.0
margin_top = 384.0
margin_right = 192.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem02" type="Sprite" parent="Items/Item02"]
position = Vector2( 64, 64 )
scale = Vector2( 9, 9 )
texture = ExtResource( 5 )

[node name="Item03" type="TextureButton" parent="Items"]
margin_left = 288.0
margin_top = 192.0
margin_right = 416.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem03" type="Sprite" parent="Items/Item03"]
position = Vector2( 64, 48 )
scale = Vector2( 9, 9 )
texture = ExtResource( 4 )

[node name="Item04" type="TextureButton" parent="Items"]
margin_left = 288.0
margin_top = 384.0
margin_right = 416.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem04" type="Sprite" parent="Items/Item04"]
position = Vector2( 48, 64 )
scale = Vector2( 9, 9 )
texture = ExtResource( 3 )

[node name="Item05" type="TextureButton" parent="Items"]
margin_left = 64.0
margin_right = 192.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem05" type="Sprite" parent="Items/Item05"]
position = Vector2( 64, 64 )
scale = Vector2( 8, 8 )
texture = ExtResource( 10 )

[node name="Item06" type="TextureButton" parent="Items"]
margin_left = 288.0
margin_right = 416.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JakieShopItem06" type="Sprite" parent="Items/Item06"]
position = Vector2( 64, 32 )
scale = Vector2( 9, 9 )
texture = ExtResource( 7 )

[node name="NamePlate" type="Node2D" parent="."]
visible = false

[node name="Panel" type="Panel" parent="NamePlate"]
margin_left = 800.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="NamePlate/Panel"]
margin_left = 160.0
margin_top = 128.0
margin_right = 288.0
margin_bottom = 256.0
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="NamePlate/Panel"]
margin_left = 288.0
margin_top = 128.0
margin_right = 416.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="NamePlate/Panel"]
margin_left = 192.0
margin_top = 288.0
margin_right = 416.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NamePlate/Panel"]
margin_top = 32.0
margin_right = 448.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="Character" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 768, 400 )
scale = Vector2( 3.5, 3.55556 )
z_index = 1
texture = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "Music"

[node name="Pause" parent="." instance=ExtResource( 13 )]

[connection signal="mouse_entered" from="Items/Item01" to="." method="_on_Item01_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item01" to="." method="_on_Item01_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item02" to="." method="_on_Item02_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item02" to="." method="_on_Item02_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item03" to="." method="_on_Item03_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item03" to="." method="_on_Item03_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item04" to="." method="_on_Item04_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item04" to="." method="_on_Item04_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item05" to="." method="_on_Item05_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item05" to="." method="_on_Item05_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item06" to="." method="_on_Item06_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item06" to="." method="_on_Item06_mouse_exited"]
